src/components/Content/UploadContent/UploadContent.css
.file-selector {
    width: 250px;
    height: 60px;
    background-color: var(--active-color);
    cursor: pointer;
    transition: all 0.2s;
    overflow: hidden;
    position: relative;
}

.file-selector svg {
    height: 100%;
    position: absolute;
    right: 20px;
    top: 0;
    font-size: 2em;
}

.file-selector p {
    font-size: 1em;
    margin: 0;
    line-height: 60px;
    font-weight: bold;
    position: absolute;
    left: 20px;
    top: 0;
    overflow: hidden;
    width: 160px;
}

input {
    display: none;
}

